--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,17 @@
 language: objective-c
+os: osx
+
+before_install:
+  - rvm install ruby --latest
+  - gem install cocoapods
+  - gem install xcpretty -N
+  - brew update
+  - brew install swiftlint || true
+
 xcode_workspace: insights-for-instagram.xcworkspace
 podfile: Podfile
-os: osx
+
+script:
+  - set -o pipefail
+  - xcodebuild -workspace insights-for-instagram.xcworkspace -scheme insights-for-instagram -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO | xcpretty -c
+  - swiftlint
