--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,14 @@ before_install:
   - rvm install ruby --latest
   - gem install cocoapods
   - gem install xcpretty -N
+  - gem install fastlane --no-ri --no-rdoc --no-document
   - pod repo update master
-  - brew update
-  - brew install swiftlint || true
 
-script:
-  - set -o pipefail
-  - xcodebuild -workspace insights-for-instagram.xcworkspace -scheme insights-for-instagram -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO | xcpretty -c
-  - swiftlint
+#  - brew update
+#  - brew install swiftlint || true
+
+jobs:
+  include:
+    - stage: XCTest
+      script:
+        - fastlane scan -s insights-for-instagram
