--- a/.travis.yml
+++ b/.travis.yml
@@ -19,10 +19,6 @@ before_install:
   - gem install fastlane --no-ri --no-rdoc --no-document
 jobs:
   include:
-    - stage: Build
+    - stage: XCTest
       script:
-        - set -o pipefail
-        - xcodebuild -workspace insights-for-instagram.xcworkspace -scheme insights-for-instagram -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO | xcpretty -c
-#    - stage: XCTest
-#      script:
-#        - fastlane scan -scheme insights-for-instagram
+        - fastlane scan -scheme insights-for-instagram
