--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: objective-c
 os: osx
+osx_image: xcode9.2
+notifications:
+  email: false
 
 xcode_workspace: insights-for-instagram.xcworkspace
 podfile: Podfile
